testsuite/tests/interpreter_errors/empty_stream_errors/tail/test.out
error: Can't get tail from an empty stream
script.lkql:4:15: in script.lkql
  4 | val _ = print(nil().tail)
    |               ^^^^^^^^^^

